# ai-news-scraper

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LOCAL_VERIFICATION.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pnpm-lock.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 1890892bda24_initial_schema.py  3b4f2a8d9c10_add_digest_and_notification_tables.py  4c5d6e7f8a9b_add_article_score_columns.py
apps/api/api/: config.py  exceptions.py  main.py
apps/api/api/db/: database.py
apps/api/api/middleware/: logging.py
apps/api/api/models/: __init__.py  article.py  digest.py  feed.py  feed_item.py  user.py
apps/api/api/routers/: articles.py  auth.py  digest.py  feeds.py  health.py  notifications.py  scrape.py  search.py
apps/api/api/scheduler/: __init__.py  brief.py
apps/api/api/schemas/: __init__.py  article.py  auth.py  digest.py  feed.py  search.py
apps/api/api/services/: __init__.py  auth.py  clustering.py  digest.py  embedder.py  feed_parser.py  notifications.py  scorer.py  scraper.py  summarizer.py  unsubscribe.py  vector_store.py
apps/api/api/services/llm/: __init__.py  _openai_compat.py  base.py  deepseek.py  gemini.py  openrouter.py
apps/api/api/workers/: __init__.py  email.py
apps/api/scripts/: seed.ps1  seed.sh  seed.sql
apps/api/tests/: conftest.py  test_brief_scheduler.py  test_digest.py  test_email_worker.py  test_exceptions.py  test_health.py  test_llm_providers.py  test_llm_providers_acceptance.py  test_logging_middleware.py  test_notifications.py  test_scorer.py  test_unsubscribe.py
apps/web/: .eslintrc.json  Dockerfile  middleware.ts  next.config.ts  package.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/articles/: ArticlesToolbar.test.tsx  ArticlesToolbar.tsx  buckets.ts  page.test.tsx  page.tsx
apps/web/src/app/(app)/articles/[id]/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/dashboard/brief/: page.tsx
apps/web/src/app/(app)/dashboard/brief/[date]/: page.tsx
apps/web/src/app/(app)/feeds/: page.tsx
apps/web/src/app/(app)/scrape/: page.tsx
apps/web/src/app/(app)/search/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/unsubscribe/: UnsubscribeForm.tsx  page.tsx
apps/web/src/components/: NotificationBell.test.tsx  NotificationBell.tsx  ScoreRing.test.tsx  ScoreRing.tsx
apps/web/src/components/layout/: AppHeader.tsx
apps/web/src/hooks/: useDigest.ts  useNotifications.test.ts  useNotifications.ts
apps/web/src/lib/: api.ts  auth.ts  utils.ts
apps/web/src/lib/api/: articles.ts  digest.test.ts  digest.ts  notifications.ts
docs/: CI-CD.md  COMPETITIVE_ANALYSIS.md  PROJECT_RULES.md
docs/research/: next-steps-prompt.md
scripts/: check.sh
